--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,32 +1,55 @@
-$header-bg-color: #333;
-$header-text-color: white;
-$header-padding: 20px;
+$header-text-color: #4d4d4d;
 
 .header {
-  background-color: $header-bg-color;
-  color: $header-text-color;
-  padding: $header-padding;
+  background-color: #fff;
+  border: 1px solid rgba(195, 212, 233, 0.4);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  padding: 40px 37px 38px 59px;
+  gap: 2px;
+  max-width: 100%;
+  text-align: left;
+  font-size: 32px;
+  color: #1aced6;
+  font-family: "Plus Jakarta Sans";
 }
 
-.title {
+.logo {
   margin: 0;
+  width: 182px;
+  font-size: inherit;
+  letter-spacing: -0.03em;
+  line-height: 44px;
+  font-weight: 700;
+  font-family: inherit;
+  display: flex;
+  align-items: center;
 }
 
-.nav {
-  margin-top: 10px;
+.rightAligned {
+  margin-left: auto; //右寄せ
+  display: flex;
 }
 
 .navList {
   list-style-type: none;
   padding: 0;
+  display: flex;
 }
 
 .navItem {
-  display: inline-block;
-  margin-right: 10px;
+  display: flex;
+  margin-right: 20px;
+  align-items: center;
 }
 
-.nav-item a {
+.navItem a {
   color: $header-text-color;
   text-decoration: none;
+  font-size: 15px;
+}
+
+.icon {
+  margin: auto auto auto 20px;
 }
