--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,7 @@
-$header-text-color: #4d4d4d;
+@import "../../styles/variables";
 
 .header {
   background-color: #fff;
-  border: 1px solid rgba(195, 212, 233, 0.4);
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
@@ -11,7 +10,7 @@ $header-text-color: #4d4d4d;
   max-width: 100%;
   text-align: left;
   font-size: 32px;
-  color: #1aced6;
+  color: $primary-color;
   font-family: "Plus Jakarta Sans";
 }
 
@@ -45,7 +44,7 @@ $header-text-color: #4d4d4d;
 }
 
 .navItem a {
-  color: $header-text-color;
+  color: $text-color;
   text-decoration: none;
   font-size: 15px;
 }
