--- a/src/styles/button/PillShapedButton.module.scss
+++ b/src/styles/button/PillShapedButton.module.scss
@@ -1,6 +1,7 @@
 @import "../variables";
 
-.pillShapedButton {
+.pillShapedButton,
+.pillShapedButtonWhite {
   height: 64px;
   border-radius: 40px;
   width: 100%;
@@ -10,6 +11,9 @@
   padding-left: 20px;
   padding-right: 20px;
   font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .pillShapedButton:hover {
@@ -17,15 +21,9 @@
 }
 
 .pillShapedButtonWhite {
-  height: 64px;
-  border-radius: 40px;
-  width: 100%;
-  font-size: 20px;
   border: 1px solid $text-color;
   background-color: white;
   color: $text-color;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .pillShapedButtonWhite:hover {
