--- a/src/styles/button/PillShapedButton.module.scss
+++ b/src/styles/button/PillShapedButton.module.scss
@@ -14,6 +14,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .pillShapedButton:hover {
