ログインユーザ用の/home/mypageのページを追加

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,6 +12,7 @@
   font-size: 32px;
   color: $primary-color;
   font-family: "Plus Jakarta Sans";
+  border-bottom: 1px solid $inactive-text-color;
 }
 
 .logo {
