--- a/src/pages/setting/profile/ViewCommonElements.module.scss
+++ b/src/pages/setting/profile/ViewCommonElements.module.scss
@@ -1,35 +1,33 @@
-$theme-colors:(
-    "primary":#1aced6
+$theme-colors: (
+  "primary": #1aced6,
 );
 .topColor {
-    background-color: #1aced6;
-    height: 30vh;
+  background-color: #1aced6;
+  height: 30vh;
 }
 
 .icon {
-    color: #232360;
-    display: flex;
-    // float: left;
-    margin-top: -5%;
-    margin-left: 7%;
+  color: #232360;
+  display: flex;
+  // float: left;
+  margin-top: -5%;
+  margin-left: 7%;
 }
 .title {
-    // float: right;
-    margin-top: 5%;
-    margin-left: 3%;
-    font-size: 3rem;
-
+  // float: right;
+  margin-top: 5%;
+  margin-left: 3%;
+  font-size: 3rem;
 }
 
 .img {
-    border-radius: 50%;   
-    width: 10rem;
-    border: solid 0.3rem#000;
+  border-radius: 50%;
+  width: 10rem;
+  border: solid 0.3rem#000;
 }
 
 .tabs {
-    margin-top: 3%;
-    margin-left: 8%;
-    height: 3em;
+  margin-top: 3%;
+  margin-left: 8%;
+  height: 3em;
 }
-
