--- a/src/components/CosmeticCard/CosmeticCard.module.scss
+++ b/src/components/CosmeticCard/CosmeticCard.module.scss
@@ -5,7 +5,7 @@
   border-radius: 24px;
   border: 1px solid $inactive-text-color;
   flex-shrink: 0;
-  padding: 2em;
+  padding: 2em 2em 1em 2em;
 }
 
 .cosmeticImageWrapper {
@@ -16,6 +16,7 @@
 .horizontalWrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .division {
@@ -29,9 +30,12 @@
   gap: 5px;
 }
 
+.marginTop {
+  margin-top: 1em;
+}
+
 .detailButtonWrapper {
   width: 80%;
-  margin-top: 1em;
   text-decoration: none;
 }
 
