--- a/src/components/page/cosmetics/cosmetic/CosmeticItem.module.scss
+++ b/src/components/page/cosmetics/cosmetic/CosmeticItem.module.scss
@@ -16,11 +16,15 @@
 .center {
   text-align: center;
   font-size: 2em;
-  margin: -1%;
+  margin: -0.5%;
 }
 
 .contents {
   padding: 0.2%;
+}
+
+.cosmeticImage {
+  margin: -4%;
 }
 
 .horizontalWrapper {
