Tagの機能を追加 (#25)
* update file name

* update company and category

* add cosmetic_tag

* use convert function

* tagをprofile itemに

* run fmt

* remove console lgo

--- a/src/components/page/cosmetics/cosmetic/CosmeticItem.module.scss
+++ b/src/components/page/cosmetics/cosmetic/CosmeticItem.module.scss
@@ -16,7 +16,7 @@
 .center {
   text-align: center;
   font-size: 2em;
-  margin: -0.5%;
+  margin: -0.1%;
 }
 
 .contents {
@@ -53,6 +53,11 @@
 .ingredientList {
   font-size: medium;
   margin: 0px;
+}
+
+.tagStyle {
+  margin-right: 4px;
+  float: left;
 }
 
 .pillShapedButtonBlue {
