--- a/src/components/page/home/intro/FuncIntroduction.module.scss
+++ b/src/components/page/home/intro/FuncIntroduction.module.scss
@@ -1,9 +1,10 @@
 @import "../../../../styles/variables";
 
 .sectionWrapper {
-  padding-left: 60px;
-  padding-right: 60px;
-  padding-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 3em;
   align-items: center;
   color: $text-color;
 }
@@ -15,8 +16,7 @@
 
 .funcWrapper {
   display: flex;
-  width: 100%;
-  justify-content: space-between;
+  gap: 2em;
 }
 
 .funcItem {
