--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,4 @@ $primary-color: #1aced6;
 $secondary-color: #fcffd0;
 $text-color: #4d4d4d;
 $inactive-text-color: rgba(102, 102, 102, 0.35);
+$pale-primary-color: rgba(26,206,214,0.7)
