--- a/src/components/page/cosmetics/search/SearchPageItems.module.scss
+++ b/src/components/page/cosmetics/search/SearchPageItems.module.scss
@@ -4,7 +4,7 @@
   padding-left: 2em;
   padding-right: 2em;
   margin-bottom: 3%;
-  color: $text-color
+  color: $text-color;
 }
 
 .inputSectionWrapper {
