--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,10 @@
 @import "../../styles/variables";
 
+.noLinkStyle {
+  text-decoration: none;
+  color: $primary-color;
+}
+
 .header {
   background-color: #fff;
   box-sizing: border-box;
@@ -9,9 +14,7 @@
   gap: 2px;
   max-width: 100%;
   text-align: left;
-  font-size: 32px;
   color: $primary-color;
-  font-family: "Plus Jakarta Sans";
   border-bottom: 1px solid $inactive-text-color;
 }
 
@@ -25,19 +28,21 @@
   font-family: inherit;
   display: flex;
   align-items: center;
+  font-size: 2em;
+  font-family: "Plus Jakarta Sans";
 }
 
 .rightAligned {
   margin-left: auto; //右寄せ
   display: flex;
-  gap: 1em;
+  gap: 2em;
 }
 
 .navList {
   list-style-type: none;
   padding: 0;
   display: flex;
-  gap: 1em;
+  gap: 2em;
 }
 
 .navItem {
@@ -48,7 +53,6 @@
 .navItem a {
   color: $text-color;
   text-decoration: none;
-  font-size: 15px;
 }
 
 .iconWrapper,
