タグを化粧品単体ページでは表示しない

--- a/src/components/page/cosmetics/cosmetic/CosmeticItem.module.scss
+++ b/src/components/page/cosmetics/cosmetic/CosmeticItem.module.scss
@@ -74,6 +74,11 @@
   align-items: center;
   justify-content: center;
   margin-top: 5vh;
+  cursor: pointer;
+}
+
+.pillShapedButtonBlue:hover {
+  background-color: $pale-primary-color;
 }
 
 .categoryIcon {
