ホバー時の挙動をつける

--- a/src/components/CosmeticCard/CosmeticCard.module.scss
+++ b/src/components/CosmeticCard/CosmeticCard.module.scss
@@ -50,6 +50,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+}
+
+.detailButton:hover {
+  background-color: $pale-primary-color;
 }
 
 .detailButtonText {
