--- a/src/styles/button/PillShapedButton.module.scss
+++ b/src/styles/button/PillShapedButton.module.scss
@@ -5,7 +5,7 @@
   height: 64px;
   border-radius: 40px;
   width: 100%;
-  background-color: lightgrey;
+  background-color: #333333;
   border: none;
   color: white;
   padding-left: 20px;
@@ -17,10 +17,11 @@
   margin-top: 20px;
   margin-bottom: 20px;
   font-family: inherit;
+  cursor: pointer;
 }
 
 .pillShapedButton:hover {
-  background-color: #333333;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .pillShapedButtonWhite {
