--- a/src/components/page/home/mypage/MypageItems.module.scss
+++ b/src/components/page/home/mypage/MypageItems.module.scss
@@ -23,7 +23,7 @@
 .leftWrapper {
   margin-top: auto;
   margin-bottom: auto;
-  margin-left: 3em;
+  // margin-left: 3em;
 }
 .buttonWrapper {
   padding-top: 3em;
@@ -37,10 +37,6 @@
   display: flex;
   justify-content: center;
   gap: 20px;
-}
-
-.bottomSectionWrapper {
-  padding: 100px;
 }
 
 .categoryButtonsWrapper {
