--- a/src/components/CosmeticCard/CosmeticCard.module.scss
+++ b/src/components/CosmeticCard/CosmeticCard.module.scss
@@ -2,6 +2,7 @@
 
 .cosmeticCard {
   width: 300px;
+  height: 480px;
   border-radius: 24px;
   border: 1px solid $inactive-text-color;
   flex-shrink: 0;
