--- a/src/components/CosmeticCard/CosmeticCard.module.scss
+++ b/src/components/CosmeticCard/CosmeticCard.module.scss
@@ -8,6 +8,13 @@
   padding: 2em 2em 1em 2em;
 }
 
+.cosmeticCardSearch{
+  width: 200px;
+  border-radius: 24px;
+  border: 1px solid $inactive-text-color;
+  flex-shrink: 0;
+  padding: 2em 2em 1em 2em;
+}
 .cosmeticImageWrapper {
   display: flex;
   justify-content: center;
