--- a/src/components/page/cosmetics/search/SearchPageItems.module.scss
+++ b/src/components/page/cosmetics/search/SearchPageItems.module.scss
@@ -23,11 +23,19 @@
 
 .filterAndResultWrapper {
   display: flex;
+  flex-direction: row;
+  @media (max-width: 800px) {
+    flex-direction: column;
+  }
 }
 
 .filtersWrapper {
-  width: 20%;
+  width: 25%;
+  @media (max-width: 800px) {
+    width:100%;
+  }
 }
+
 
 .filtersTitleWrapper {
   display: flex;
@@ -36,10 +44,13 @@
 }
 
 .resultWrapper {
-  width: 80%;
+  width: 75%;
   display: flex;
   flex-wrap: wrap;
   gap: 1em;
+  @media (max-width: 800px) {
+    width:100%;
+  }
 }
 
 .textBox {
