--- a/src/components/CosmeticCard/CosmeticCard.module.scss
+++ b/src/components/CosmeticCard/CosmeticCard.module.scss
@@ -25,8 +25,8 @@
 }
 
 .matchRateWrapper {
-  display: flex;
-  align-items: center;
+  display: block;
+  align-items: right;
   justify-content: center;
   gap: 5px;
 }
