--- a/src/components/page/cosmetics/cosmetic/CosmeticItem.module.scss
+++ b/src/components/page/cosmetics/cosmetic/CosmeticItem.module.scss
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 1em;
 }
 .cosmeticItemWrapper {
   display: flex;
@@ -96,7 +97,7 @@
   background-color: white;
   color: $primary-color;
   display: inline-block;
-  padding: 0 0.5em;
+  padding: 0.5em;
   height: auto;
 }
 
