--- a/src/components/page/cosmetics/cosmetic/CosmeticItem.module.scss
+++ b/src/components/page/cosmetics/cosmetic/CosmeticItem.module.scss
@@ -6,7 +6,6 @@
   gap: 3em;
 }
 .upperWrapper {
-  margin-top: 2em;
   display: flex;
   width: 100%;
 }
@@ -28,8 +27,9 @@
 
 .title {
   text-align: center;
-  font-size: 2em;
+  font-size: 1.8em;
   font-weight: bold;
+  color: $text-color;
 }
 
 .center {
