--- a/src/components/Layout/AuthLayout.module.scss
+++ b/src/components/Layout/AuthLayout.module.scss
@@ -10,6 +10,8 @@
 
 .form {
   width: 700px;
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
   border-radius: 24px;
   background-color: white;
   color: $text-color;
