--- a/src/components/page/auth/ProgressBar.module.scss
+++ b/src/components/page/auth/ProgressBar.module.scss
@@ -17,7 +17,7 @@
 }
 
 .progressLine {
-  border-color: rgba(102, 102, 102, 0.35);
+  border-color: white;
   width: 30%;
   margin: -40px 0 20px;
 }
