introページのcssをfix

--- a/src/components/page/home/intro/FuncIntroduction.module.scss
+++ b/src/components/page/home/intro/FuncIntroduction.module.scss
@@ -9,9 +9,17 @@
   color: $text-color;
 }
 
+@media screen and (max-width: 768px) {
+  .funcWrapper {
+    flex-direction: column; /* 子要素を縦に並べる */
+  }
+}
+
 .subtitle {
   text-align: center;
   width: 100%;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .funcWrapper {
