機能紹介の文字をでかくした

--- a/src/components/page/home/intro/FuncIntroduction.module.scss
+++ b/src/components/page/home/intro/FuncIntroduction.module.scss
@@ -12,6 +12,9 @@
 .subtitle {
   text-align: center;
   width: 100%;
+  font-size: 1.5em;
+  margin-bottom: .5em;
+  margin-top: .5em;
 }
 
 .funcWrapper {
