npx prettier  --write src/

--- a/src/components/page/home/intro/FuncIntroduction.module.scss
+++ b/src/components/page/home/intro/FuncIntroduction.module.scss
@@ -19,8 +19,8 @@
   text-align: center;
   width: 100%;
   font-size: 1.5em;
-  margin-bottom: .5em;
-  margin-top: .5em;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 .funcWrapper {
@@ -45,7 +45,7 @@
   background-color: white;
   color: #717171;
   height: 2em;
-  border-radius: .2em;
+  border-radius: 0.2em;
   border: none;
   font-weight: bold;
   text-align: center;
